--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
-  
+  <h1 class="page-heading">文章列表</h1>
+
   {{ content }}
 
   <ul class="post-list">
